Update 01-terraform-provision-aks-cluster-pipeline1.yml for Azure Pipelines

--- a/01-terraform-provision-aks-cluster-pipeline1.yml
+++ b/01-terraform-provision-aks-cluster-pipeline1.yml
@@ -18,7 +18,7 @@ stages:
 - stage: TerraformValidate
   jobs:
    - job: TerraformValidateJob
-     continueError: false
+     continueOnError: false
      steps:
        - task: PublishPipelineArtifact@1
          displayName: Publish Artifact
