Update 01-terraform-provision-aks-cluster-pipeline1.yml for Azure Pipelines

--- a/01-terraform-provision-aks-cluster-pipeline1.yml
+++ b/01-terraform-provision-aks-cluster-pipeline1.yml
@@ -7,7 +7,7 @@ trigger:
 - master
 
 pool:
-  vmImage: ubuntu-latest
+  name: 'azureagentpool'
 
 # Stage-1: Terraform Validate Stage
 ## Step-1: Publish Artifacts to Pipeline (Pipeline artifacts provide a way to share files between stages in a pipeline or between different pipelines. )
