Update 01-terraform-provision-aks-cluster-pipeline1.yml for Azure Pipelines

--- a/01-terraform-provision-aks-cluster-pipeline1.yml
+++ b/01-terraform-provision-aks-cluster-pipeline1.yml
@@ -24,13 +24,13 @@ stages:
          displayName: Publish Artifact
          inputs:
           targetPath: '$(Pipeline.Workspace)/terraform-manifests'
-          artifact: 'terraform-manifests-out'
+          artifact: 'terraform-manifests'
           publishLocation: 'pipeline'
        - task: TerraformInstaller@1
          displayName: Terraform Install
          inputs:
           terraformVersion: 'latest'
-      
+
        - task: TerraformTaskV4@4
          displayName: Terraform Init
          inputs:
