Update 01-terraform-provision-aks-cluster-pipeline1.yml for Azure Pipelines

--- a/01-terraform-provision-aks-cluster-pipeline1.yml
+++ b/01-terraform-provision-aks-cluster-pipeline1.yml
@@ -93,7 +93,7 @@ stages:
                   provider: 'azurerm'
                   command: 'plan'
                   workingDirectory: '$(System.DefaultWorkingDirectory)/terraform-manifests'
-                  commandOptions: '-var ssh_public_key=$(sshkey.secureFilePath) -var environment=$(Dev_Env) -out $(Pipeline.Workspace)/terraform-manifests-out/$(Dev_Env)-$(Build.BuildId).out'
+                  commandOptions: '-var ssh_public_key=$(sshkey.secureFilePath) -var environment=$(Dev_Env) -out $(Pipeline.Workspace)/terraform-manifests/$(Dev_Env)-$(Build.BuildId).out'
                   environmentServiceNameAzureRM: 'terraform-aks-azurerm-svc-con'
               - task: TerraformTaskV4@4
                 displayName: Terraform Apply
