Update 01-terraform-provision-aks-cluster-pipeline1.yml for Azure Pipelines

--- a/01-terraform-provision-aks-cluster-pipeline1.yml
+++ b/01-terraform-provision-aks-cluster-pipeline1.yml
@@ -73,6 +73,7 @@ stages:
            steps:
               - task: DownloadSecureFile@1
                 displayName: Download SSH key
+                name: sshkey
                 inputs:
                   secureFile: 'id_rsa.pub'
               - task: TerraformTaskV4@4
