--- a/01-terraform-provision-aks-cluster-pipeline1.yml
+++ b/01-terraform-provision-aks-cluster-pipeline1.yml
@@ -97,9 +97,9 @@ stages:
                   commandOptions: '-var ssh_public_key=$(sshkey.secureFilePath) -var environment=$(Dev_Env) -out $(Pipeline.Workspace)/terraform-manifests/$(Dev_Env)-$(Build.BuildId).out'
                   environmentServiceNameAzureRM: 'terraform-aks-azurerm-svc-con'
               - task: TerraformTaskV4@4
-                displayName: Terraform Apply
                 inputs:
                   provider: 'azurerm'
                   command: 'apply'
+                  workingDirectory: '$(System.DefaultWorkingDirectory)/terraform-manifests'
                   commandOptions: '$(Pipeline.Workspace)/terraform-manifests/$(Dev_Env)-$(Build.BuildId).out'
                   environmentServiceNameAzureRM: 'terraform-aks-azurerm-svc-con'
