Update 01-terraform-provision-aks-cluster-pipeline1.yml for Azure Pipelines

--- a/01-terraform-provision-aks-cluster-pipeline1.yml
+++ b/01-terraform-provision-aks-cluster-pipeline1.yml
@@ -65,7 +65,7 @@ stages:
     - deployment: DeploymentAKSCluster
       displayName: DeployDevAKSCluster
       pool:
-       name: 'azureagentpool'
+       name: 'azureagent1'
       environment: $(Dev_Env)
       strategy:
        runOnce:
